[gd_scene load_steps=10 format=3 uid="uid://c8bp2gr3um1kk"]

[ext_resource type="Script" uid="uid://ctmhdhn5megwr" path="res://assets/player/player.gd" id="1_onrkg"]
[ext_resource type="Script" uid="uid://w3f6s8ctp428" path="res://assets/player/movement/movement_normal.gd" id="2_d5dr7"]
[ext_resource type="PackedScene" uid="uid://1quaodva78dk" path="res://assets/player/body_manager/body_manager.tscn" id="3_ouxva"]
[ext_resource type="Script" uid="uid://pggdogo4hsp1" path="res://assets/player/movement/movement_board.gd" id="3_toylo"]
[ext_resource type="Script" uid="uid://dc3qhl0jit4y6" path="res://src/health/health.gd" id="7_tb4ck"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_d5dr7"]
height = 1.573
radius = 0.36

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_toylo"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_toylo"]
size = Vector3(0.2, 1.715, 0.2)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_toylo"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("MovementNormal:synced_velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("MovementNormal:move_dir")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
floor_constant_speed = true
script = ExtResource("1_onrkg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.783121, 0)
shape = SubResource("CylinderShape3D_d5dr7")

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_tb4ck")
metadata/_custom_type_script = "uid://dc3qhl0jit4y6"

[node name="MovementNormal" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_d5dr7")

[node name="MovementBoard" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_toylo")

[node name="TargetPointMarker" type="MeshInstance3D" parent="MovementBoard"]
physics_interpolation_mode = 2
visible = false
material_override = SubResource("StandardMaterial3D_toylo")
cast_shadow = 0
mesh = SubResource("BoxMesh_toylo")

[node name="Visuals" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="BodyManager" parent="Visuals" instance=ExtResource("3_ouxva")]
unique_name_in_owner = true

[node name="DebugLabel" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1.12483, 0, 0, 0, 1.12483, 0, 0, 0, 1.12483, 0, 3.63161, 0)
visible = false
pixel_size = 0.01
billboard = 1
text = "321321"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_toylo")

[node name="MovesNum" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.74902, 0)
pixel_size = 0.032
billboard = 1
text = "e"
